test/classes/delete-free/bug-375.good
bug-375.chpl:4: In function 'main':
bug-375.chpl:6: error: Cannot change class type in conversion from 'owned Child' to 'shared Parent'
